{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 229,
  "lineage": "9fe3d11c-cf35-68f1-a85f-532bc5d33e79",
  "resources": [
    {
      "module": "module.Jenkins_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0409af1cb831414",
            "arn": "arn:aws:ec2:us-west-1:694505486355:instance/i-0e127f007c7691046",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e127f007c7691046",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "linux-key-pair-x",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ebcff7dde9dd1c3",
            "private_dns": "ip-10-0-3-130.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.130",
            "public_dns": "ec2-13-52-102-53.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.102.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01619d7f991573e56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ba381c00ef7d627",
            "tags": {
              "Name": "Jenkins_server_AWS"
            },
            "tags_all": {
              "Name": "Jenkins_server_AWS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03805ea4f58b4fed1"
            ]
          },
          "dependencies": [
            "module.Jenkins_server.aws_key_pair.key_pair",
            "module.Jenkins_server.tls_private_key.private_key",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC",
            "module.securitygroup.aws_security_group.SG"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:loadbalancer/app/test-lb-tf/7787c07502043746",
            "arn_suffix": "app/test-lb-tf/7787c07502043746",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1245996863.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:694505486355:loadbalancer/app/test-lb-tf/7787c07502043746",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e6879bab27714c5a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018ca390f7803e6cb"
              },
              {
                "subnet_id": "subnet-01ba381c00ef7d627"
              }
            ],
            "subnets": [
              "subnet-018ca390f7803e6cb",
              "subnet-01ba381c00ef7d627"
            ],
            "vpc_id": "vpc-0907a192ab3bb7153",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC",
            "module.securitygroup.aws_security_group.LB_SG"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:listener/app/test-lb-tf/7787c07502043746/52fc04e7bbf1643f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/JenkinsTG/876267aaa8b7fcf4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:694505486355:listener/app/test-lb-tf/7787c07502043746/52fc04e7bbf1643f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:loadbalancer/app/test-lb-tf/7787c07502043746",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.LoadBalancer.aws_lb.test",
            "module.TG.aws_lb_target_group.jenkinsTG",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC",
            "module.securitygroup.aws_security_group.LB_SG"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:listener/app/test-lb-tf/7787c07502043746/10f48b0c78602299",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/FlaskTG/a6647908bff583c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:694505486355:listener/app/test-lb-tf/7787c07502043746/10f48b0c78602299",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:loadbalancer/app/test-lb-tf/7787c07502043746",
            "mutual_authentication": [],
            "port": 4000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.LoadBalancer.aws_lb.test",
            "module.TG.aws_lb_target_group.jenkinsTG",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC",
            "module.securitygroup.aws_security_group.LB_SG"
          ]
        }
      ]
    },
    {
      "module": "module.TG",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/JenkinsTG/876267aaa8b7fcf4-20240317182250804600000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/JenkinsTG/876267aaa8b7fcf4",
            "target_id": "i-0e127f007c7691046"
          },
          "dependencies": [
            "module.Jenkins_server.aws_instance.jenkins",
            "module.Jenkins_server.aws_key_pair.key_pair",
            "module.Jenkins_server.tls_private_key.private_key",
            "module.TG.aws_lb_target_group.jenkinsTG",
            "module.flask_server.aws_instance.flask-server_tf",
            "module.flask_server_SG.aws_security_group.Flask_SG",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC",
            "module.securitygroup.aws_security_group.SG"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/FlaskTG/a6647908bff583c5-20240317182250464500000001",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/FlaskTG/a6647908bff583c5",
            "target_id": "i-0690eab800c174a9a"
          },
          "dependencies": [
            "module.Jenkins_server.aws_instance.jenkins",
            "module.Jenkins_server.aws_key_pair.key_pair",
            "module.Jenkins_server.tls_private_key.private_key",
            "module.TG.aws_lb_target_group.jenkinsTG",
            "module.flask_server.aws_instance.flask-server_tf",
            "module.flask_server_SG.aws_security_group.Flask_SG",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC",
            "module.securitygroup.aws_security_group.SG"
          ]
        }
      ]
    },
    {
      "module": "module.TG",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkinsTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/JenkinsTG/876267aaa8b7fcf4",
            "arn_suffix": "targetgroup/JenkinsTG/876267aaa8b7fcf4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/JenkinsTG/876267aaa8b7fcf4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:694505486355:loadbalancer/app/test-lb-tf/7787c07502043746"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "JenkinsTG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/FlaskTG/a6647908bff583c5",
            "arn_suffix": "targetgroup/FlaskTG/a6647908bff583c5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:694505486355:targetgroup/FlaskTG/a6647908bff583c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:694505486355:loadbalancer/app/test-lb-tf/7787c07502043746"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "FlaskTG",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.flask_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "flask-server_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0409af1cb831414",
            "arn": "arn:aws:ec2:us-west-1:694505486355:instance/i-0690eab800c174a9a",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0690eab800c174a9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "linux-key-pair-x",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0188cb4498e327f92",
            "private_dns": "ip-10-0-5-28.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06be8a7b2b1af66b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bedad092e062384",
            "tags": {
              "Name": "Flask-server"
            },
            "tags_all": {
              "Name": "Flask-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00480b7c5579f3b9d"
            ]
          },
          "dependencies": [
            "module.Jenkins_server.aws_key_pair.key_pair",
            "module.Jenkins_server.tls_private_key.private_key",
            "module.flask_server_SG.aws_security_group.Flask_SG",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.flask_server_SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Flask_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:security-group/sg-00480b7c5579f3b9d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00480b7c5579f3b9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "allow_flask_port",
            "name_prefix": "",
            "owner_id": "694505486355",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d264e3441aa8e166",
            "association_id": "eipassoc-032e9af51f3243245",
            "domain": "vpc",
            "id": "eipalloc-0d264e3441aa8e166",
            "network_border_group": "us-west-1",
            "network_interface": "eni-057b5f2edf3410b7c",
            "private_dns": "ip-10-0-4-160.us-west-1.compute.internal",
            "private_ip": "10.0.4.160",
            "public_dns": "ec2-13-52-112-158.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.112.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:internet-gateway/igw-019850216e5e59689",
            "id": "igw-019850216e5e59689",
            "owner_id": "694505486355",
            "tags": {
              "Name": "Insta_VPC_IGW"
            },
            "tags_all": {
              "Name": "Insta_VPC_IGW"
            },
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d264e3441aa8e166",
            "association_id": "eipassoc-032e9af51f3243245",
            "connectivity_type": "public",
            "id": "nat-00b75280967fa0d82",
            "network_interface_id": "eni-057b5f2edf3410b7c",
            "private_ip": "10.0.4.160",
            "public_ip": "13.52.112.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-018ca390f7803e6cb",
            "tags": {
              "Name": "NatGateway-X"
            },
            "tags_all": {
              "Name": "NatGateway-X"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_ip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:route-table/rtb-015178e175c85f19e",
            "id": "rtb-015178e175c85f19e",
            "owner_id": "694505486355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00b75280967fa0d82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "Insta_VPC_private_rt"
            },
            "tags_all": {
              "Name": "Insta_VPC_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_ip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:route-table/rtb-07f4bc1ac8080a690",
            "id": "rtb-07f4bc1ac8080a690",
            "owner_id": "694505486355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019850216e5e59689",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Insta_VPC_publi_rt"
            },
            "tags_all": {
              "Name": "Insta_VPC_publi_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095c68874914bb64e",
            "route_table_id": "rtb-015178e175c85f19e",
            "subnet_id": "subnet-00bedad092e062384"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_ip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d07f3e4f1e942423",
            "route_table_id": "rtb-015178e175c85f19e",
            "subnet_id": "subnet-0de7e86a232fb0ecc"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_ip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0002e615fd1fba8f0",
            "route_table_id": "rtb-07f4bc1ac8080a690",
            "subnet_id": "subnet-01ba381c00ef7d627"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0885e4a9f753da484",
            "route_table_id": "rtb-07f4bc1ac8080a690",
            "subnet_id": "subnet-018ca390f7803e6cb"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:subnet/subnet-00bedad092e062384",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bedad092e062384",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694505486355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Insta_VPC_Private_A"
            },
            "tags_all": {
              "Name": "Insta_VPC_Private_A"
            },
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:subnet/subnet-0de7e86a232fb0ecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de7e86a232fb0ecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694505486355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Insta_VPC_private_B"
            },
            "tags_all": {
              "Name": "Insta_VPC_private_B"
            },
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:subnet/subnet-01ba381c00ef7d627",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ba381c00ef7d627",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694505486355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Insta_VPC_Public_A"
            },
            "tags_all": {
              "Name": "Insta_VPC_Public_A"
            },
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:subnet/subnet-018ca390f7803e6cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ca390f7803e6cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694505486355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Insta_VPC_Public_B"
            },
            "tags_all": {
              "Name": "Insta_VPC_Public_B"
            },
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "X_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:vpc/vpc-0907a192ab3bb7153",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-051769a25b505672e",
            "default_route_table_id": "rtb-025fc8f4abe8b09e5",
            "default_security_group_id": "sg-01d255cf3542ba710",
            "dhcp_options_id": "dopt-53f53335",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0907a192ab3bb7153",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025fc8f4abe8b09e5",
            "owner_id": "694505486355",
            "tags": {
              "Name": "Insta_VPC"
            },
            "tags_all": {
              "Name": "Insta_VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:security-group/sg-0e6879bab27714c5a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6879bab27714c5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow web ports",
            "name_prefix": "",
            "owner_id": "694505486355",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:694505486355:security-group/sg-03805ea4f58b4fed1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03805ea4f58b4fed1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_allow_SSH_Http_https_jenkins",
            "name_prefix": "",
            "owner_id": "694505486355",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0907a192ab3bb7153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.X_VPC"
          ]
        }
      ]
    }
  ]
}